Now gets location in CurrentLocationViewController. New Graffiti class

--- a/Graffiti/Info.plist
+++ b/Graffiti/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Graffiti utiliza tu localización para guardar graffitis que te vayas encontrando.</string>
 </dict>
 </plist>
