CurrentLocation Segue implemented, Graffiti class extends MKAnnotation GraffitiDetailsViewController has now GraffitiDetailsViewComtrollerDelegate protocol implemented. Camera and Photo Library ImagePicker implemented

--- a/Graffiti/Info.plist
+++ b/Graffiti/Info.plist
@@ -38,5 +38,9 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Graffiti utiliza tu localización para guardar graffitis que te vayas encontrando.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Graffiti necesita acceder a la camara para poder sacar fotos de los graffitis que vayas encontrando </string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Graffiti necesita acceder a la librería para seleccionar las fotos de los graffitis </string>
 </dict>
 </plist>
